--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
 [[edge_functions]]
   function = "produto"
   path = "/produto.html"
+
+[[edge_functions]]
+  function = "produto" 
+  path = "/produto/*"
+
+[[redirects]]
+  from = "/produto/*"
+  to = "/produto.html"
+  status = 200
