--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,6 @@
 backend:
-  name: github
-  repo: rianrp/chefinhogamestore
+  name: git-gateway
   branch: main 
-  auth_type: implicit
-
 
 media_folder: "img/uploads"
 public_folder: "/img/uploads"
