feat: implement admin panel for product management with real-time stats and API integration feat: add data migration tool for transferring local data to KV Store fix: enhance CORS support in Netlify functions for better API accessibility fix: update product retrieval and update functions to handle errors and responses correctly style: improve HTML structure and CSS styling for better user experience in admin panel

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,17 @@
   from = "/produto/*"
   to = "/produto.html"
   status = 200
+
+# Configurações para o painel admin
+[[redirects]]
+  from = "/admin/*"
+  to = "/admin/index.html"
+  status = 200
+
+# Headers para CORS das functions
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
