feat: remove admin-dev and admin-local HTML files; enhance admin-secure with media upload functionality and JSON handling; add Netlify functions for media management

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,6 +11,11 @@
   to = "/produto.html"
   status = 200
 
+[[redirects]]
+  from = "/media/*"
+  to = "/.netlify/functions/media/:splat"
+  status = 200
+
 # Configurações para o painel admin
 [[redirects]]
   from = "/admin/*"
