--- a/admin/config.yml
+++ b/admin/config.yml
@@ -81,19 +81,116 @@ collections:
           - label: "Produtos"
             name: "products"
             widget: "list"
-            summary: "{{fields.name}} - R$ {{fields.rl_price}}"
+            summary: "{{fields.name}} - R$ {{fields.rl_price}} ({{fields.category}})"
+            label_singular: "Produto"
+            minimize_collapsed: true
             fields:
-              - { label: "ID", name: "id", widget: "string" }
-              - { label: "Nome do Produto", name: "name", widget: "string" }
-              - { label: "URL da Imagem", name: "image_url", widget: "string", required: false }
-              - { label: "URL do Vídeo", name: "video_url", widget: "string", required: false }
-              - { label: "Preço RL", name: "rl_price", widget: "number", value_type: "float" }
-              - { label: "Preço Parcelado", name: "parcelado_price", widget: "number", value_type: "float", default: 0 }
-              - { label: "Preço KKS", name: "kks_price", widget: "number", value_type: "float" }
-              - { label: "Quantidade", name: "quantity", widget: "number", value_type: "int", default: 1 }
-              - { label: "Valor de Compra", name: "purchased_value", widget: "number", value_type: "int", default: 0 }
-              - { label: "Categoria", name: "category", widget: "string" }
-              - { label: "Descrição", name: "description", widget: "text" }
-              - { label: "Data de Criação", name: "created_at", widget: "date", format: "YYYY-MM-DD" }
-              - { label: "Fixado", name: "fixed", widget: "boolean", required: false }
-              - { label: "Ativo", name: "is_active", widget: "boolean", default: true }
+              - label: "ID do Produto"
+                name: "id"
+                widget: "string"
+                hint: "Identificador único do produto (ex: 1, 2, 3...)"
+              
+              - label: "Nome do Produto"
+                name: "name"
+                widget: "string"
+                hint: "Nome completo que aparecerá na loja"
+              
+              - label: "Categoria"
+                name: "category"
+                widget: "select"
+                options:
+                  - { label: "Free Fire", value: "free fire" }
+                  - { label: "Roblox", value: "roblox" }
+                  - { label: "Rucoy Knight", value: "kina" }
+                  - { label: "Rucoy Mage", value: "mage" }
+                  - { label: "Rucoy Paladin", value: "pally" }
+                  - { label: "Rucoy Distance", value: "Rucoy Distance" }
+                  - { label: "Conta Shop Rucoy", value: "Conta Shop Rucoy" }
+                  - { label: "Clash Royale", value: "clash royale" }
+                  - { label: "Clash of Clans", value: "clash of clans" }
+                  - { label: "Brawl Stars", value: "brawl stars" }
+                  - { label: "Itens", value: "itens" }
+                  - { label: "Geral", value: "geral" }
+                default: "geral"
+              
+              - label: "Descrição"
+                name: "description"
+                widget: "text"
+                hint: "Detalhes sobre o produto"
+              
+              - label: "Preço RL (Real)"
+                name: "rl_price"
+                widget: "number"
+                value_type: "float"
+                min: 0
+                step: 0.01
+                hint: "Preço em reais (ex: 100.00)"
+              
+              - label: "Preço Parcelado"
+                name: "parcelado_price"
+                widget: "number"
+                value_type: "float"
+                min: 0
+                step: 0.01
+                default: 0
+                required: false
+                hint: "Deixe 0 se não houver parcelamento"
+              
+              - label: "Preço KKS"
+                name: "kks_price"
+                widget: "number"
+                value_type: "float"
+                min: 0
+                step: 0.01
+                hint: "Preço convertido automaticamente"
+              
+              - label: "Quantidade em Estoque"
+                name: "quantity"
+                widget: "number"
+                value_type: "int"
+                min: 0
+                default: 1
+                hint: "Quantidade disponível"
+              
+              - label: "URL da Imagem"
+                name: "image_url"
+                widget: "string"
+                required: false
+                hint: "Link da imagem do produto (deixe vazio se usar vídeo)"
+              
+              - label: "URL do Vídeo"
+                name: "video_url"
+                widget: "string"
+                required: false
+                hint: "Link do vídeo do produto (deixe vazio se usar imagem)"
+              
+              - label: "Valor de Compra"
+                name: "purchased_value"
+                widget: "number"
+                value_type: "int"
+                min: 0
+                default: 0
+                required: false
+                hint: "Quanto você pagou pelo produto (controle interno)"
+              
+              - label: "Data de Criação"
+                name: "created_at"
+                widget: "datetime"
+                format: "YYYY-MM-DD"
+                date_format: "DD/MM/YYYY"
+                time_format: false
+                default: ""
+                hint: "Data em que o produto foi adicionado"
+              
+              - label: "Produto Fixado"
+                name: "fixed"
+                widget: "boolean"
+                required: false
+                default: false
+                hint: "Marque para fixar o produto no topo"
+              
+              - label: "Produto Ativo"
+                name: "is_active"
+                widget: "boolean"
+                default: true
+                hint: "Desmarque para ocultar o produto da loja"
